# notebooklm-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_RU.md  install.bat  install.sh  install_mcp.py  login.bat  login.sh  patch_mcp.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
src/notebooklm_mcp/: __init__.py  client.py  config.py  exceptions.py  logger.py  server.py
tests/: test_client.py
