[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notebooklm-mcp"
version = "0.4.0"
description = "A production-ready FastMCP server for NotebookLM"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "python-dotenv",
    "notebooklm-py[browser]",
    "playwright",
    "watchdog"
]

[project.scripts]
notebooklm-mcp = "notebooklm_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "flake8",
    "black",
    "mypy"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
